Bug 697400: Mark visited objects when counting OCG layer entries.